# sts-datacenter-automation

./: .gitignore  CHANGELOG.md  CONTEXT.md  check_chrome_vers.py  check_shares.py  diag_phase5_6.py  diag_smb_pw.py  fix_and_verify.py  fix_smb_auth.py  pipeline_test_report.txt  read_remote_log.py  test_pipeline_all_phases.py
.claude/: settings.local.json
01_crawl_tool/: .gitignore  pyproject.toml  requirements.txt  run.py  run_forever.bat  run_supervised.bat  setup.bat  setup.sh
01_crawl_tool/configs/: _local_acc1.py  _local_acc2.py  _local_acc3.py  _local_acc4.py  _local_template.py
01_crawl_tool/docs/: ARCHITECTURE.md  PIPELINE_ARCHITECTURE.md  README_Pipeline.md  SYSTEM_DOCUMENTATION.md
01_crawl_tool/scripts/: auto_set_expected.py  generate_manifest.py  hang_watcher.sh  migrate_config_v2.py  notify.py  run_supervised.sh  sync_siblings.sh
01_crawl_tool/src/: driver_setup.py  main.py  utils.py
01_crawl_tool/src/config/: __init__.py  _local.example.py  _local.py.template  auth.py  proxy.py  scrape_filters.py  settings.py
01_crawl_tool/src/core/: __init__.py  auth.py  browser.py  proxy_rotator.py  tokens.py
01_crawl_tool/src/extract/: __init__.py  async_fetcher.py  detail_capture.py  http_fetcher.py
01_crawl_tool/src/nav/: __init__.py  pagination.py
01_crawl_tool/src/observability/: __init__.py  logger.py  metrics.py
01_crawl_tool/src/parsing/: __init__.py  field_mapping.py  transaction.py
01_crawl_tool/src/scraper/: __init__.py  api_client.py  core_pro_daily.py  core_pro_detail.py  navigator_pro.py
01_crawl_tool/src/storage/: __init__.py  checkpoint.py  csv_sink.py  excel_sink.py  filename.py
01_crawl_tool/tools/: check_latest_data.py  check_transaction_date.py  convert_to_excel.py  extract_suppliers_buyers.py  filter_by_hscode.py  filter_by_product.py  finalize_pro_detail.py  inspect_conflicts.py  merge_daily_pro.py
02_ingestion_pipeline/: .env.example  .gitignore  DEPENDENCIES.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
02_ingestion_pipeline/dags/: dag_export.py  dag_ingest.py  send_email_dag.py
02_ingestion_pipeline/dags/sensors/: google_drive_sensor.py
02_ingestion_pipeline/markdown/: first_run_setup.md  module_architecture.md
02_ingestion_pipeline/scripts/: entrypoint-init.sh  first-run.sh  google_drive_auth.py  init-dbs.sql  init-mongo.js
02_ingestion_pipeline/tests/: __init__.py  test_data_loader_entrypoints.py  test_file_dispatcher.py  test_file_google_drive_repository.py  test_google_drive_downloader.py  test_google_drive_service.py  test_ingest_service.py  test_models.py  test_processors.py  test_repository.py
(+101 files in other folders)
