[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper-52wmb"
version = "0.2.0"
description = "Vietnam Customs Data scraper for pro.52wmb.com (Selenium + httpx hybrid)"
readme = "README_Pipeline.md"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "selenium",
    "undetected-chromedriver",
    "beautifulsoup4",
    "openpyxl",
    "setuptools",
    "pysocks",
    "requests",
    "httpx[http2]",
    "h2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov",
    "ruff",
    "black",
]

[project.scripts]
scraper = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "scripts*", "tools*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
