[project]
name = "sts-data-ingestion"
version = "1.0.0"
description = "Data Ingestion System using DDD + Clean Architecture"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "mathettatca", email = "khoinm0603@gmail.com"}
]

dependencies = [
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pymongo>=4.6.0",
    "psycopg2-binary>=2.9.0",
    "google-auth>=2.25.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "google-api-python-client>=2.100.0",
    "boto3>=1.28.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.67.3",
    "pytest>=9.0.3",
    "apache-airflow>=2.9.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "openai>=1.0.0",
    "asyncpg>=0.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.9.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "src/shared",
    "src/data_ingest",
    "src/data_loader",
    "src/data_proccessing",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
